--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@tanstack/react-query": "^5.90.16",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
